# CoherenceLattice

./: .gitattributes  .gitignore  Fix-UCC-MappingAndExtract.ps1  Peer_Review_Guide.MD  README.md  ledger.jsonl
.github/workflows/: ci.yml  ci.yml.bak_20260109_133400  ci.yml.bak_fix_20260109_142535  ci.yml.bak_fix_smoke_20260109_182006  ci.yml.bak_fix_telemetry_  ci.yml.bak_plasticity_v2_gate  ci.yml.bak_plasticity_v3_clean  ci.yml.bak_receipt_gate  ci.yml.bak_reset_20260109_182804  ingest_smoke.yml  (+9 more)
docs/: LAMBDA_FORMALIZATION.md  PEER_REVIEW_QUICKSTART.md
experiments/: README.md
paper/: REPRODUCE.md
python/: README.md  plot_sim.py  pyproject.toml
schema/: epistemic_graph.schema.json  plasticity_decision.schema.json  plasticity_decision_v2.schema.json  plasticity_patch_plan.schema.json  plasticity_patch_plan_v2.schema.json  submission.schema.json
scripts/: ingest_proposal.ps1  lean_check.ps1  make_uvlm_bundle.ps1  new_receipt.ps1  new_sandbox_pr.ps1  patch_ci.ps1  seal_latest_ucc.ps1  verify_ledger.ps1
sophia-core/: README.md
tests/: test_lambda_deltaS_guided_vs_unguided.py
tools/coherenceledger_bootstrap/: README.md  pyproject.toml
tools/coherenceledger_bootstrap/coherenceledger/: __main__.py  anchor.py  base58.py  crypto.py  did.py  hashing.py  jcs.py  keystore.py  ledger.py  schemas.py  ucc_anchor.py
tools/coherenceledger_bootstrap/coherenceledger/tests/: test_ledger.py
ucc/: DEMO.md  README.md  UCC_CONSTITUTION.md  pyproject.toml  pyproject.toml.bak_20260107_191257
uvlm_upload_bundle/: dev_bootstrap.py  validate_governance.py  validate_json.py
(+401 files in other folders)
