[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coherenceledger"
version = "0.1.0"
description = "Bootstrap ledger + DID tools for CoherenceLattice audit anchoring"
requires-python = ">=3.10"
dependencies = ["cryptography>=41"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["coherenceledger"]
